fix: adjust font size in category select options for better readability

--- a/src/app/shared/components/category-select/category-select.scss
+++ b/src/app/shared/components/category-select/category-select.scss
@@ -44,7 +44,7 @@
     border-radius: 6px;
     padding: 0.4rem 0.8rem;
     font-family: var(--font-mulish);
-    font-size: clamp(0.8rem, 2vh, 3rem);
+    font-size: clamp(0.8rem, 1.6vh, 1.4rem);
     text-align: left;
 
     &:hover,
